--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "javascript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "memo.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon memo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
