--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "javascript",
   "version": "1.0.0",
-  "description": "",
   "main": "memo.js",
   "scripts": {
     "dev": "nodemon memo.js",
@@ -10,13 +9,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.11.0",
     "crypto-js": "^4.1.1",
     "diff-match-patch": "^1.0.5",
+    "express": "^4.18.2",
     "json": "^11.0.0",
     "underscore": "^1.13.3",
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "nodemon": "^2.0.20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kimroyi/javascript-practice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kimroyi/javascript-practice/issues"
+  },
+  "homepage": "https://github.com/kimroyi/javascript-practice#readme",
+  "description": ""
 }
