--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "javascript",
-  "version": "1.0.0",
-  "main": "memo.js",
-  "scripts": {
-    "dev": "nodemon memo.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "canvas": "^2.11.0",
-    "crypto-js": "^4.1.1",
-    "diff-match-patch": "^1.0.5",
-    "express": "^4.18.2",
-    "json": "^11.0.0",
-    "underscore": "^1.13.3",
-    "underscore.string": "^3.3.6"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kimroyi/javascript-practice.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kimroyi/javascript-practice/issues"
-  },
-  "homepage": "https://github.com/kimroyi/javascript-practice#readme",
-  "description": ""
+    "name": "javascript",
+    "version": "1.0.0",
+    "main": "memo.js",
+    "scripts": {
+        "dev": "nodemon memo.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "canvas": "^2.11.0",
+        "crypto-js": "^4.1.1",
+        "diff-match-patch": "^1.0.5",
+        "express": "^4.18.2",
+        "json": "^11.0.0",
+        "underscore": "^1.13.3",
+        "underscore.string": "^3.3.6",
+        "moment": "^2.29.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kimroyi/javascript-practice.git"
+    },
+    "bugs": {
+        "url": "https://github.com/kimroyi/javascript-practice/issues"
+    },
+    "homepage": "https://github.com/kimroyi/javascript-practice#readme",
+    "description": ""
 }
