--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "diff-match-patch": "^1.0.5",
         "express": "^4.18.2",
         "json": "^11.0.0",
+        "moment": "^2.29.1",
         "underscore": "^1.13.3",
-        "underscore.string": "^3.3.6",
-        "moment": "^2.29.1"
+        "underscore.string": "^3.3.6"
     },
     "devDependencies": {
-        "nodemon": "^2.0.20"
+        "nodemon": "^3.1.4"
     },
     "repository": {
         "type": "git",
